--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Exploring the World with Leaflet"
 author: "Raghav Kapoor"
-date: "`r Sys.Date()`"
+date: "30 Oct 2025"
 output:
   html_document:
     theme: flatly
